[SMXCOMP-176] Support Jar and File URLs with regexp on entries in the xbean <classpath/> location.
git-svn-id: https://svn.apache.org/repos/asf/servicemix/smx3/trunk@762467 13f79535-47bb-0310-9956-ffa450edef68